[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/HTMLRender.gd" type="Script" id=2]

[node name="HTMLRender" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Container"]
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "Webpage Title"

[node name="WebpageContainer" type="MarginContainer" parent="Container"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Scrolling" type="ScrollContainer" parent="Container/WebpageContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 574.0

[node name="VerticalSplitter" type="VBoxContainer" parent="Container/WebpageContainer/Scrolling"]
margin_right = 1008.0
size_flags_horizontal = 3
